# grok-agent-orchestra

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.old.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  vscode-extension.yml
benchmarks/: harness.py
benchmarks/results/: latest.md
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/RELEASING/: index.html
dev/architecture/comparison/: index.html
dev/architecture/extending/: index.html
dev/architecture/overview/: index.html
dev/blog/: index.html
dev/blog/2026-04-orchestra-vs-gpt-researcher/: index.html
dev/changelog/: index.html
dev/community/launch-posts/: index.html
dev/concepts/debate-loop/: index.html
dev/concepts/dynamic-spawn/: index.html
dev/concepts/four-roles/: index.html
dev/concepts/lucas-veto/: index.html
dev/contributing/: index.html
dev/contributing/code-of-conduct/: index.html
dev/contributing/releasing/: index.html
dev/deploy/docker/: index.html
dev/deploy/fly/: index.html
dev/deploy/render/: index.html
dev/deploy/vercel/: index.html
dev/getting-started/: index.html
dev/getting-started/first-orchestration/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/quickstart/: index.html
dev/guides/image-generation/: index.html
dev/guides/local-docs/: index.html
dev/guides/mcp/: index.html
dev/guides/multi-provider-llm/: index.html
dev/guides/reports-and-export/: index.html
dev/guides/templates/: index.html
dev/guides/tracing/: index.html
dev/guides/web-search/: index.html
dev/images/: index.html
dev/integrations/build-bridge/: index.html
dev/integrations/claude-skill/: index.html
dev/integrations/vscode/: index.html
dev/marketplace-v2/: index.html
dev/observability/: index.html
dev/orchestra/: index.html
dev/playground/: index.html
dev/reference/cli/: index.html
dev/reference/events/: index.html
dev/reference/python-api/: index.html
dev/reference/yaml-schema/: index.html
dev/search/: search_index.json
dev/vscode-orchestra/: index.html
docs/: RELEASING.md  getting-started.md  index.md  observability.md  orchestra.md
docs/architecture/: comparison.md  overview.md
docs/blog/: 2026-04-orchestra-vs-gpt-researcher.md
docs/community/: launch-posts.md
docs/deploy/: docker.md  render.md
docs/guides/: image-generation.md  reports-and-export.md
docs/images/: README.md  report-sample.png.placeholder  trace-langsmith.png.placeholder  web-ui.png.placeholder
docs/integrations/: vscode.md
docs/reference/: yaml-schema.md
examples/: simulated-toxic.yaml
examples/with-images/: README.md  illustrated-research.yaml
extensions/vscode/: CHANGELOG.md  README.md
extensions/vscode/src/client/: remoteClient.ts
extensions/vscode/src/views/: recentRunsTree.ts  templatesTree.ts
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/runs/[runId]/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/templates/: page.tsx
frontend/components/: debate-stream.tsx  login-form.tsx  lucas-panel.tsx  run-detail-view.tsx  settings-form.tsx
frontend/lib/: sentry.ts
grok_orchestra/: __init__.py  _errors.py  _templates.py  cli.py  combined.py  dispatcher.py  multi_agent_client.py  parser.py  patterns.py  runtime_native.py  runtime_simulated.py  safety_veto.py  streaming.py
grok_orchestra/images/: __init__.py  factory.py  sd_provider.py
grok_orchestra/publisher/: __init__.py  _docx.py
grok_orchestra/publisher/templates/: default_report.md.j2
grok_orchestra/schema/: orchestra.schema.json
grok_orchestra/sources/: __init__.py  fetcher.py  web.py
grok_orchestra/sources/providers/: __init__.py  bing.py  brave.py  serpapi.py
grok_orchestra/templates/: INDEX.yaml  basic-native.yaml  basic-simulated.yaml  combined-coder-critic.yaml  combined-trendseeker.yaml  combined.yaml  hierarchical.yaml  orchestra-debate-loop-policy.yaml  orchestra-dynamic-spawn-trend-analyzer.yaml  orchestra-hierarchical-research.yaml  orchestra-native-16.yaml  orchestra-native-4.yaml  orchestra-parallel-tools-fact-check.yaml  orchestra-recovery-resilient.yaml  orchestra-simulated-truthseeker.yaml  weekly-news-digest.yaml
grok_orchestra/tracing/: __init__.py  factory.py  langfuse_tracer.py  scrubber.py  types.py
grok_orchestra/web/: main.py  registry.py  runner.py
grok_orchestra/web/templates/: index.html
tests/: conftest.py  test_benchmark_harness.py  test_cli_orchestra.py  test_cli_smoke.py  test_combined.py  test_fetcher.py  test_image_providers_mock.py  test_integration_orchestra.py  test_runtime_native.py  test_runtime_simulated.py  test_tracing_langsmith.py  test_tracing_noop.py  test_web_auth.py
