[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-agent-orchestra"
version = "0.1.0"
description = "Grok 4.20 multi-agent orchestration on top of Grok Build Bridge — xAI-native and prompt-simulated debate."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Jan Solo", email = "jan@agentmind.cloud" },
    { name = "AgentMindCloud" },
]
keywords = [
    "grok",
    "grok-4.20",
    "xai",
    "multi-agent",
    "orchestration",
    "agents",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "grok-build-bridge>=0.1",
    "xai-sdk>=1.0",
    "pyyaml>=6",
    "rich>=13",
    "typer>=0.12",
    "tenacity>=8.2",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
]

[project.scripts]
grok-orchestra = "grok_orchestra.cli:main"

[project.urls]
Homepage = "https://github.com/agentmindcloud/grok-agent-orchestra"
Repository = "https://github.com/agentmindcloud/grok-agent-orchestra"
Issues = "https://github.com/agentmindcloud/grok-agent-orchestra/issues"
Changelog = "https://github.com/agentmindcloud/grok-agent-orchestra/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["grok_orchestra*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
grok_orchestra = ["schema/*.json", "templates/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
